tests/sintax-semanth/should_fail/assignmentTypeCheck.tds
program
begin
    integer x1,y1;
    bool a1,b1,c1;
    integer main()
        begin
            integer x,y;
            bool a,b,c;
            a = true;
            b = c; 
            b = false;
            c = (b == true);
            x = 10 + y;
            y = 10 - 5;
            x1 = true; //Should fail and it fails
            return 1;
        end
end
